trunk/tests/jastadd/negative/name_errors/L1/3_MultipleDeclarations.ob
MODULE TestModule;
	CONST a = 1;
		  a = 2;
END TestModule.
